Исправил падинги героя

--- a/src/sass/layouts/_hero.scss
+++ b/src/sass/layouts/_hero.scss
@@ -3,11 +3,9 @@
 
   @media screen and (min-width: $tablet) {
     padding-top: 102px;
-    padding-bottom: 28px;
   }
-
   @media screen and (min-width: $desktop) {
-    padding-bottom: 45px;
+    padding-top: 171px;
   }
 }
 
@@ -274,14 +272,14 @@
     width: 324;
     height: 322px;
     left: 293px;
-    bottom: 18px;
+    bottom: 46px;
   }
 
   @media screen and (min-width: $desktop) {
     width: 538px;
     height: 538px;
-    left: 449px;
-    bottom: 47px;
+    left: 475px;
+    bottom: 75px;
   }
 }
 
@@ -293,11 +291,10 @@
 
   @media screen and (min-width: $tablet) {
     right: 233px;
-    bottom: -28px;
   }
 
   @media screen and (min-width: $desktop) {
-    left: 568px;
+    left: 594px;
   }
 }
 
@@ -308,11 +305,10 @@
     position: absolute;
     display: block;
     right: 20px;
-    bottom: -28px;
+    bottom: 0;
   }
 
   @media screen and (min-width: $desktop) {
     right: 109px;
-    bottom: -45px;
   }
 }
