Добавила в переменные 2 цвета

--- a/src/sass/utils/_variables.scss
+++ b/src/sass/utils/_variables.scss
@@ -16,4 +16,8 @@ $black-color:#000000; // черный цвет #000000
 $grey-color:#907E82; // серый цвет #907E82
 $light-green-color:#C2E297; // салатовый цвет #C2E297
 $light-brown-color:#F0D1A5; // светло коричневый #F0D1A5
+$footer-color-svg: #FEA5BB; // цвет svg в футере #FEA5BB
+$footer-underlined: #E1E1E1; // цвет бордера в футере #E1E1E1
+
+
 
