Исправляет ошибки в хедер

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -11,11 +11,11 @@
         >
           <use
             class="header-icon-close"
-            href="../src/images/icon/sprite.svg#close"
+            href="../src/images/icons/sprite.svg#close"
           ></use>
           <use
             class="header-icon-menu"
-            href="../src/images/icon/sprite.svg#menu"
+            href="../src/images/icons/sprite.svg#menu"
           ></use>
         </svg>
       </button>
@@ -28,7 +28,7 @@
           >
             <use
               class="header-menu-arrow"
-              href="../src/images/icon/sprite.svg#tip"
+              href="../src/images/icons/sprite.svg#tip"
             ></use>
           </svg>
         </button>
