Исправляет ошибки в хедере

--- a/src/sass/layouts/_header.scss
+++ b/src/sass/layouts/_header.scss
@@ -1,5 +1,5 @@
 .header-container {
-  background-color: $secondary-accent;
+  background-color: #ffb8ca;
 }
 .header-wrapper {
   @include for-size(mobile-only) {
