Позиционирование элементов героя

--- a/src/sass/layouts/_hero.scss
+++ b/src/sass/layouts/_hero.scss
@@ -4,9 +4,10 @@
   @media screen and (min-width: $tablet) {
     padding-top: 102px;
   }
+
   @media screen and (min-width: $desktop) {
     padding-top: 171px;
-   }
+  }
 }
 
 .hero .container {
@@ -16,15 +17,22 @@
     overflow: hidden;
     min-height: 440px;
   }
+
+  @media screen and (min-width: $tablet) {
+    padding-bottom: 28px;
+  }
+
+  @media screen and (min-width: $desktop) {
+    padding-bottom: 45px;
+  }
 }
 
 .upper-line {
   display: flex;
   justify-content: space-between;
-  margin-bottom: 19px;
 
   @media screen and (min-width: $desktop) {
-    margin-bottom: 56px;
+    margin-bottom: 60px;
     padding-left: 70px;
   }
 }
@@ -140,6 +148,11 @@
   position: relative;
 
   &::before {
+    position: absolute;
+    top: 0;
+    right: 0;
+    transform: translate(40%, -30%);
+    z-index: 0;
     content: '';
     display: block;
 
@@ -156,7 +169,11 @@
 }
 
 .places-item:not(:last-child) {
-  margin-bottom: 41px;
+  margin-bottom: 13px;
+
+  @media screen and (min-width: $desktop) {
+    margin-bottom: 15px;
+  }
 }
 
 .places-box {
@@ -164,6 +181,9 @@
 }
 
 .places-number {
+  position: relative;
+  z-index: 5;
+
   font-family: 'Titan One', sans-serif;
   font-weight: 400;
   font-size: 28px;
@@ -278,7 +298,7 @@
   @media screen and (min-width: $desktop) {
     width: 538px;
     height: 538px;
-    left: 475px;
+    left: 495px;
     bottom: 75px;
   }
 }
@@ -294,7 +314,7 @@
   }
 
   @media screen and (min-width: $desktop) {
-    left: 594px;
+    left: 614px;
   }
 }
 
@@ -309,6 +329,6 @@
   }
 
   @media screen and (min-width: $desktop) {
-    right: 109px;
+    right: 0;
   }
 }
