--- a/src/partials/modal.html
+++ b/src/partials/modal.html
@@ -9,36 +9,29 @@
         </div>
 
         <div class="form">
-            <h3 class="title form-title">Оставьте свои данные, мы вам перезвоним</h3>
+            <h3 class="title form-title">ОСТАВЬТЕ ЗАЯВКУ<br>и мы свяжемся с вами в ближайшее время</h3>
 
             <form>
                 <div class="form-field">
-                    <label class="form-label" for="name">Имя</label>
-                    <input type="text" class=" form-input form-no" name="user-name" id="name" placeholder="" />
+                    <label class="form-label" for="name"></label>
+                    <input type="text" class=" form-input form-no" name="user-name" id="name" placeholder="Имя" />
                     <svg class="form-icon" width="18" height="18">
                         <use href="./images/pictures/icons/symbolall.svg#icon-person"></use>
                     </svg>
                 </div>
                 <div class="form-field">
-                    <label class=" form-label " for="tel">Телефон</label>
-                    <input type="tel" class=" form-input form-no" name="tel" id="tel" placeholder=""
+                    <label class=" form-label " for="tel"></label>
+                    <input type="tel" class=" form-input form-no" name="tel" id="tel" placeholder="Телефон"
                         autocomplete="off" />
                     <svg class="form-icon" width="18" height="18">
-                        <use href="./images/pictures/icons/symbolall.svg##icon-phone"></use>
+                        <use href="./images/pictures/icons/symbolall.svg#icon-phone"></use>
                     </svg>
                 </div>
-                <div class="form-field">
-                    <label class="form-label " for="mail">Почта</label>
-                    <input type="email" class="form-input form-no" name="mail" id="mail" placeholder=""
-                        autocomplete="off" />
-                    <svg class="form-icon" width="18" height="18">
-                        <use href="./images/pictures/icons/symbolall.svg##icon-emailblack"></use>
-                    </svg>
-                </div>
+      
 
                 <div class="form-box">
-                    <label class="form-name form-label" for="comment">Комментарий</label>
-                    <textarea name="comment" id="comment" rows="4" placeholder="Введите текст"
+                    <label class="form-name form-label" for="comment"></label>
+                    <textarea name="comment" id="comment" rows="4" placeholder="Введите комметарий"
                         class="form-input texterea-text form-no " utocomplete="off"></textarea>
                 </div>
 
@@ -48,10 +41,10 @@
                         <input type="checkbox" class="form-input checkbox" name="chek" value="chek" />
                         <span class="span-icon"></span>
                         <span class="span-check-text"></span>
-                        Соглашаюсь с рассылкой и принимаю <a href="#" class=" link span-check"> Условия договора</a>
+                        Отправляя форму,я соглашаюсь на оброботку персональних даных в соответствии с<a href="#" class=" link span-check"> Политикой конфиденциальности</a>
                     </label>
 
-                    <button class="button btn-submit" type="submit">Отправить</button>
+                    <button class=" btn-secondary btn_modal" type="submit">Отправить</button>
                 </div>
             </form>
         </div>
