--- a/src/sass/layouts/_modal.scss
+++ b/src/sass/layouts/_modal.scss
@@ -6,42 +6,39 @@
   bottom: 0;
   background-color: rgba(25, 28, 38, 0.8);
   z-index: 100;
-  opacity: 1;
 }
 .backdrop.is-hidden {
-  visibility: hidden;
   opacity: 0;
   pointer-events: none;
 }
 .modal {
+  display: flex;
   position: absolute;
 
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  height: 581px;
-
-  @include for-size(mobile-only) {
-    padding-left: 15px;
-    padding-right: 15px;
-
-    max-width: 340px;
+  @media screen and (max-width: 480px) {
+    max-width: 480px;
+    left: 47%;
     width: 100%;
+    max-width: 609px;
   }
-
-  @include for-size(tablet) {
+  @media screen and(min-width:481px) {
+    width: 450px;
+  }
+  @media screen and (max-width: 1199px) {
     padding-left: 40px;
     padding-right: 40px;
     margin-right: 15px;
     margin-left: 15px;
-    width: 430px;
   }
-  @include for-size(desktop) {
+  @media screen and(min-width:1200px) {
     width: 528px;
-    height: 581px;
   }
+  border: thick double $secondary-accent;
   background-color: $white;
-  border-radius: 4px;
+  border-radius: 25px;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   &-icon {
@@ -62,7 +59,7 @@
   height: 30px;
   width: 30px;
 
-  background-color: $black;
+  background-color: inherit;
   border: 1px solid rgba(0, 0, 0, 0.1);
   border-radius: 50%;
   cursor: pointer;
@@ -100,22 +97,22 @@
 .form-label {
   margin-top: 10px;
   margin-bottom: 4px;
-
-  color: $secondary-accent;
-  font-size: 12px;
-  line-height: 1.16;
-  letter-spacing: 0.02;
 }
 .form-input {
   height: 40px;
 
   border: 1px solid rgba(33, 33, 33, 0.2);
-  border-radius: 4px;
+  border-radius: 25px;
   cursor: pointer;
 
   -webkit-appearance: none;
   appearance: none;
   -moz-appearance: none;
+  &::placeholder {
+    font-size: 14px;
+    line-height: 1.16;
+    color: rgba(117, 117, 117, 0.5);
+  }
 }
 .form-box {
   display: flex;
@@ -134,7 +131,6 @@
 .form-chek {
   text-align: center;
   & label {
-    display: inline-flex;
     align-items: center;
 
     font-size: 14px;
@@ -142,7 +138,7 @@
 
     cursor: pointer;
     transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    color: $secondary-accent;
+    color: $black;
   }
 }
 .form-chek input[type='checkbox'] {
@@ -158,7 +154,7 @@
   width: 15px;
   height: 16px;
 
-  border: 2px solid $primary-accent;
+  border: 2px solid $black;
   border-radius: 4px;
 }
 .checkbox {
@@ -193,11 +189,11 @@
 }
 .form-icon {
   position: absolute;
-  top: 38px;
-  left: 15px;
+  top: 25px;
+  left: 20px;
 
   display: inline-block;
-  fill: $primary-accent;
+  fill: $black;
   transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .form-input:focus ~ .form-icon {
@@ -230,4 +226,11 @@
 }
 .span-check-text:focus {
   color: $secondary-accent;
+}
+.btn_modal {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 15px;
+  margin-bottom: 15px;
 }
