--- a/src/sass/base/_button.scss
+++ b/src/sass/base/_button.scss
@@ -3,21 +3,22 @@
   justify-content: center;
   align-items: center;
 
+  font-family: DM Sans;
   font-style: normal;
   font-weight: bold;
   font-size: 16px;
-  line-height: 21px;
+  line-height: 1.31;
   color: getColor(accent-color);
 
-  width: 200px;
+  padding-left: 37px;
+  padding-right: 37px;
   height: 44px;
   border-radius: 22px;
   border: 0;
-  background-color: getColor(white);
+  background-color: white;
 
   &:focus,
   &:hover {
-    color: getColor(white);
+    color: white;
     background-color: getColor(accent-color);
   }
-}
