--- a/src/sass/layouts/_hero.scss
+++ b/src/sass/layouts/_hero.scss
@@ -34,6 +34,7 @@
   @media screen and (min-width: $desktop) {
     margin-bottom: 60px;
     padding-left: 70px;
+    padding-right: 70px;
   }
 }
 
@@ -169,10 +170,10 @@
 }
 
 .places-item:not(:last-child) {
-  margin-bottom: 13px;
+  margin-bottom: 17px;
 
   @media screen and (min-width: $desktop) {
-    margin-bottom: 15px;
+    margin-bottom: 20px;
   }
 }
 
@@ -299,7 +300,7 @@
     width: 538px;
     height: 538px;
     left: 495px;
-    bottom: 75px;
+    bottom: 65px;
   }
 }
 
@@ -329,6 +330,6 @@
   }
 
   @media screen and (min-width: $desktop) {
-    right: 0;
+    right: 109px;
   }
 }
