--- a/src/sass/_comments.scss
+++ b/src/sass/_comments.scss
@@ -1,10 +1,105 @@
+
+.comments-container {
+ width: 100%;
+ padding-top: 80px;
+ padding-bottom: 86px;
+ 
+  @media screen and(min-width: $tablet) and (max-width: 1199px) {
+    max-width: 620px; 
+    padding-top: 121px;
+    padding-bottom: 119px;
+    padding-right: 0;
+    padding-left: 0;
+  }
+  @media screen and(min-width: $desktop) {
+    max-width: 926px;
+    padding-top: 121px;
+    padding-bottom: 119px;
+    padding-right: 0;
+    padding-left: 0;
+  }  
+
+}
+
+.comment-text-container {
+ width: 100%;
+ position: relative;
+ z-index: -2;
+
+ margin-top: 29px;
+ margin-bottom: 30px;
+
+ background-color: $alternate-bg-color;
+
+ @media screen and(min-width: $tablet) and (max-width: 1199){
+    // padding: 30px 36px 28px 40px;
+ margin-top: 19px;
+ margin-bottom: 24px;
+  }
+
+@media screen and(min-width: $desktop) {
+    // padding: 32px 54px 32px 50px;
+    margin-top: 15px;
+    margin-bottom: 15px;
+  } 
+}
+
 .comment-text {
-font-family: $primary-font;
-font-weight: 500;
-font-size: 16px;
-line-height: 1.875;
-text-align: center;
-letter-spacing: 0.04em;
+  font-family: $primary-font;
+    font-weight: 500;
+    text-align: center;
+    line-height: 2.58;
+    letter-spacing: 0.04em;
+    color: $black;
+
+@media screen and (max-width: $mobile) {
+    padding: 43px 66px 26px 57px;  
+    font-size: 12px;
+   line-height: 2.58;
+  }
+
+@media screen and (min-width: $tablet) and (max-width: 1199px)  {
+    padding: 47px 80px 34px 80px;
+    font-size: 14px;
+    line-height: 2.14;
+    
+  }
+
+
+   
+ @media screen and (min-width: $desktop) {
+    padding: 47px 89px 39px 87px;
+   
+   font-size: 16px;
+   line-height: 1.875;
+
+  }  
+}
+
+.comment-dekor {
+
+  position: absolute;
+  display: inline-block;
+  top: 28px;
+  left: 61px;
+
+  z-index: -1;
+  width: 54px;
+  height: 40px;
+  background-image: url("../images/svg/comment-dekor.svg");
+  fill: $primary-decor-color;
+  background-repeat: no-repeat;
+  background-size: contain;
+
+    @media screen and (min-width: $tablet) and (max-width: 1199px){
+    top: 17%;
+    left: 7%;
+  }
+
+ @media screen and(min-width: $desktop) {
+  top: 32px;
+  left: 50px;
+  }  
 }
 
 .comment-dots {
@@ -15,7 +110,7 @@ letter-spacing: 0.04em;
     width: 4px;
     height: 4px;
     border-radius: 50%;
-    color: $smallcircle-decor-color;
+    background-color: $smallcircle-decor-color;
  }
     & .dot + .dot {
         margin-left: 10px;
@@ -26,24 +121,45 @@ letter-spacing: 0.04em;
 .slider-dots {
     display: flex;
     justify-content: center;
+  
+  & .comment-icon-home {
+    width: 12.4px;
+    height: 12px;
+    fill: $home-decor-color;
+  }
 
     & .dot {
     width: 12px;
     height: 12px;
     border-radius: 50%;
-    color: $largecircle-decor-color;
+     background-color: $largecircle-decor-color;  
+
+  
  }
     & .dot + .dot {
         margin-left: 18px;
     }
 }
  .comment-name {
-font-family: $primary-font;
-font-weight: 500;
-font-size: 20px;
-line-height: 1.85;
-text-align: center;
-letter-spacing: 0.04em;
+    margin-top: 18px;
+    margin-bottom: 30px;
+    font-family: $primary-font;
+    font-weight: 500;
+
+    line-height: 1.85;
+    text-align: center;
+    letter-spacing: 0.04em;
+   font-size: 14px;  
+   
+    @media screen and (min-width: $tablet) and (max-width: 1199px){
+    font-size: 16px;
+     line-height: 1.875;
+  }
+   @media screen and(min-width: $desktop) {
+    margin-top: 15px;
+    margin-bottom: 35px;
+    font-size: 20px;
+  }    
 }
 
 
