--- a/src/partials/comments.html
+++ b/src/partials/comments.html
@@ -1,14 +1,24 @@
 <section class="comments">
-  <div class="container">
+  <div class="container comments-container">
     <h2 class="visually-hidden"></h2>
     <!-- Ваш код здесь -->
     <div class="comments-slider">
-      <div></div>
+      <!-- <picture class="comments-foto">
+        <source srcset="../images/comments/testimonials-1.jpg, 
+                      ../images/comments/testimonials-1@2x.jpg"  />
+        <img class="team-img" src="../images/comments/testimonials-1.jpg"
+         width="85" height="85" alt="Foto Emily"/>
+      </picture> -->
       <!-- your content -->
-      <div class="comment-text">
-        Nullam viverra consectetuer. Quisque cursus et, porttitor risus. Aliquam sem. In hendrerit nulla quam nunc, accumsan
+      <div class="comment-text-container">
+      
+    <div class="comment-text">
+        <span class="comment-dekor"></span>
+             Nullam viverra consectetuer. Quisque cursus et, porttitor risus. Aliquam sem. In hendrerit nulla quam nunc, accumsan
         congue. Lorem ipsum primis in nibh vel risus.
      </div>
+
+    </div> 
       <!-- your content -->
       <div class="comment-dots">
         <div class="dot"></div>
@@ -18,7 +28,9 @@
       <!-- your content -->
       <div class="comment-name">Emily, Los Angeles</div>
       <div class="slider-dots">
-        <div class="dot"></div>
+        <!-- <svg class="comment-icon-home">
+          <use href="../images/svg/sprite.svg#icon-home"></use>
+        </svg> -->
         <div class="dot"></div>
         <div class="dot"></div>
       </div>
