--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -3,7 +3,7 @@
         
             <div class="hero-top-line">
                 <div class="passions">
-                    <p class="passions-text">ice cream made with <span>passion</span></p>
+                    <h1 class="passions-text">ice cream made with <span>passion</span></h1>
                     <div class="anchor">
                         <a class="anchor-products" href="#products">Products</a>
                         <a class="anchor-how-its-made" href="#how-its-made">How it’s made?</a>
