--- a/src/sass/utils/_variables.scss
+++ b/src/sass/utils/_variables.scss
@@ -16,3 +16,5 @@ $black-color: #000000; // черный цвет #000000
 $grey-color: #907e82; // серый цвет #907E82
 $light-green-color: #c2e297; // салатовый цвет #C2E297
 $light-brown-color: #f0d1a5; // светло коричневый #F0D1A5
+$footer-color-svg: #fea5bb; // цвет svg в футере #FEA5BB
+$footer-underlined: #e1e1e1; // цвет бордера в футере #E1E1E1
