приховує проблемні місця і додає спрайт

--- a/src/sass/layout/_recall.scss
+++ b/src/sass/layout/_recall.scss
@@ -72,14 +72,14 @@
     
     
     
-    background-image: url(../../images/testimonuals/vector-tel.svg),
-    url(../../images/testimonuals/vector-tel.svg),
-    url(../../images/testimonuals/vector-tel.svg),
-    url(../../images/testimonuals/vector-tel.svg),
-    url(../../images/testimonuals/vector-tel.svg),
-    url(../../images/testimonuals/vector-tel.svg),
-    url(../../images/testimonuals/vector-tel.svg),
-    url(../../images/testimonuals/vector-tel.svg);
+    // background-image: url(../../images/testimonuals/vector-tel.svg),
+    // url(../../images/testimonuals/vector-tel.svg),
+    // url(../../images/testimonuals/vector-tel.svg),
+    // url(../../images/testimonuals/vector-tel.svg),
+    // url(../../images/testimonuals/vector-tel.svg),
+    // url(../../images/testimonuals/vector-tel.svg),
+    // url(../../images/testimonuals/vector-tel.svg),
+    // url(../../images/testimonuals/vector-tel.svg);
     background-repeat: no-repeat;
     background-position: left 51px top 71px, left 51px top 102px, left 51px top 133px, 
     left 51px top 164px, left 51px top 195px, left 51px top 226px, left 51px top 257px, left 51px top 288px;
@@ -92,9 +92,9 @@
         line-height: 2.16;
         letter-spacing: 0.04em;
     
-        background-image: url(../../images/testimonuals/vector-tablet.svg),
-        url(../../images/testimonuals/vector-tablet.svg),
-        url(../../images/testimonuals/vector-tablet.svg);
+        // background-image: url(../../images/testimonuals/vector-tablet.svg),
+        // url(../../images/testimonuals/vector-tablet.svg),
+        // url(../../images/testimonuals/vector-tablet.svg);
         background-repeat: no-repeat;
         background-position: left 60px top 76px, left 60px top 106px, left 60px top 136px;
     }
@@ -106,10 +106,10 @@
         line-height: 1.86;
         letter-spacing: 0.04em;
     
-        background-image: url(../../images/testimonuals/vector-decstop.svg),
-        url(../../images/testimonuals/vector-decstop.svg);
-        background-repeat: no-repeat;
-        background-position: left 59px top 75px, left 59px top 106px;
+        // background-image: url(../../images/testimonuals/vector-decstop.svg),
+        // url(../../images/testimonuals/vector-decstop.svg);
+        // background-repeat: no-repeat;
+        // background-position: left 59px top 75px, left 59px top 106px;
     }
     
     }
