making changes to buttons

--- a/src/partials/section-slider.html
+++ b/src/partials/section-slider.html
@@ -1,6 +1,6 @@
 <section class="reviews">
   <div class="container slider">
-    <article>
+    <article class="slide">
       <picture>
         <source
           srcset="
@@ -29,9 +29,11 @@
       </p>
 
       <p class="reviewer-name">Emily, Los Angeles</p>
+
+      <div class="dots-slik"></div>
     </article>
 
-    <article>
+    <article class="slide">
       <picture>
         <source
           srcset="
@@ -65,7 +67,8 @@
 
       <p class="reviewer-name">Emily, Los Angeles</p>
     </article>
-    <article>
+
+    <article class="slide">
       <picture>
         <source
           srcset="
@@ -91,7 +94,8 @@
       </picture>
 
       <p class="review-text">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae, atque.
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repellendus
+        illum cum minus fugit.
       </p>
 
       <p class="reviewer-name">Emily, Los Angeles</p>
