добавила дополнительные стили для секции

--- a/src/sass/layouts/_components.scss
+++ b/src/sass/layouts/_components.scss
@@ -51,9 +51,20 @@
     }
   }
 }
+
 .components-bg {
   background-color: $color-background-section;
+  @media screen and (max-width: 739px) {
+    padding-top: 39px;
+  }
+  @media screen and (min-width: $tablet) and (max-width: 1279px) {
+    padding-top: 66px;
+  }
+  @media screen and( min-width:$desktop ) {
+    padding-top: 39px;
+  }
 }
+
 .pad-bottom {
   padding-bottom: 97px;
   @media screen and (min-width: $tablet) {
