finish goal, finish about, work with experience

--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,11 +1,11 @@
 <section class="section section-hero">
   <div class="container">
-    <h1 class="title-hero">Світлана Олександрівна Пірятинець</h1>
+    <h1 class="title-dark-theme">Світлана Олександрівна Пірятинець</h1>
     <ul class="list">
       <li class="item item-hero">Кваліфікаційна категорія «Спеціаліст вищої категорії»</li>
       <li class="item item-hero">Вчитель молодших класів</li>
     </ul>
     <button class="button-dark-theme" type="button">Про мене</button>
-    <img class="photo-hero" src="./images/hero/sveta.png" aria-label="фото Світлани Олександрівни" alt="фото Світлани Олександрівни">    
+    <img class="photo-hero" src="./images/hero/hero-photo.png" aria-label="фото Світлани Олександрівни" alt="фото Світлани Олександрівни">    
   </div>  
 </section>
