--- a/src/sass/components/_button.scss
+++ b/src/sass/components/_button.scss
@@ -13,5 +13,25 @@
     height: 56px;
     border-radius: 100px;
     @include font(700, 14px, 16px);
+    margin-left: 30px;
+  }
+}
+
+.button-light-theme {
+  display: block;
+  margin: 0 auto;
+  width: 120px;
+  height: 46px;
+  border-radius: 80px;
+  @include font(700, 12px, 14px);
+  border: none;
+  color: $color-dark-theme;
+  background: linear-gradient($gradient-color);
+
+  @media screen and (min-width: 1200px) {
+    width: 160px;
+    height: 56px;
+    border-radius: 100px;
+    @include font(700, 14px, 16px);
   }
 }
