--- a/src/sass/layout/_hero.scss
+++ b/src/sass/layout/_hero.scss
@@ -60,7 +60,7 @@
   }
 }
 
-.title-hero {
+.title-dark-theme {
   margin-bottom: 20px;
   @include font(900, 24px, 50px);
   color: $color-dark-theme;
@@ -81,6 +81,7 @@
   @media screen and (min-width: 1200px) {
     @include font(900, 44px, 70px);
     width: 650px;
+    padding-left: 30px;
   }
 }
 
@@ -94,5 +95,6 @@
 
   @media screen and (min-width: 768px) {
     @include font(400, 18px, 33px);
+    padding-left: 30px;
   }
 }
