--- a/src/partials/team.html
+++ b/src/partials/team.html
@@ -1,6 +1,6 @@
 <section class="container section_slider">
 
-    <!-- <div class="sl">
+    <div class="sl">
         <div class="sl__slider">
             <img
                 source srcset="./images/testimonuals/testimonials1.png 1x, ./images/testimonuals/testimonials1@2x.png 2x"
@@ -21,5 +21,5 @@
             <li class="sl__points-icon icon"></li>
         </ul>
         </div>
-    </div> -->
+    </div>
 </section>
