--- a/src/sass/layout/_recall.scss
+++ b/src/sass/layout/_recall.scss
@@ -1,164 +1,164 @@
-// .section_slider {
-//     background-color: #E5E5E5;
-//     width: 100%;
-//     }
+.section_slider {
+    background-color: #E5E5E5;
+    width: 100%;
+    }
     
-//     .sl {
-//         padding-top: 80px;
+    .sl {
+        padding-top: 80px;
     
-//     @media screen and (min-width: 768px) {
-//         padding-top: 121px;
+    @media screen and (min-width: 768px) {
+        padding-top: 121px;
     
-//     @media screen and (min-width: 1280px) {
-//         padding-top: 123px;
-//     }
-//     }
-//     }
+    @media screen and (min-width: 1280px) {
+        padding-top: 123px;
+    }
+    }
+    }
     
-//     .sl__img {
-//         display: flex;
-//         width: 85px;
-//         height: 85px;
-//         margin-left: auto;
-//         margin-right: auto;
-//         margin-bottom: 29px;
+    .sl__img {
+        display: flex;
+        width: 85px;
+        height: 85px;
+        margin-left: auto;
+        margin-right: auto;
+        margin-bottom: 29px;
     
-//         @media screen and (min-width: 768px) {
-//             margin-bottom: 19px;
-//         }
-//         @media screen and (min-width: 1280px) {
-//             margin-bottom: 15px;
-//         }
+        @media screen and (min-width: 768px) {
+            margin-bottom: 19px;
+        }
+        @media screen and (min-width: 1280px) {
+            margin-bottom: 15px;
+        }
     
-//     }
+    }
     
-//     .sl__text {
-//         width: 280px;
-//         min-height: 308px;
-//         margin-left: auto;
-//         margin-right: auto;
-//         background-color: #FAFAFA;
-//         background-image: url(../../images/testimonuals/lapki.svg);
-//         background-repeat: no-repeat;
-//         background-position: 61px 28px;
+    .sl__text {
+        width: 280px;
+        min-height: 308px;
+        margin-left: auto;
+        margin-right: auto;
+        background-color: #FAFAFA;
+        background-image: url(../../images/testimonuals/lapki.svg);
+        background-repeat: no-repeat;
+        background-position: 61px 28px;
        
-//         @media screen and (min-width: 768px) {
-//             width: 620px;
-//             min-height: 164px;
+        @media screen and (min-width: 768px) {
+            width: 620px;
+            min-height: 164px;
         
-//             background-position: 40px 30px;
-//         }
+            background-position: 40px 30px;
+        }
     
-//         @media screen and (min-width: 1280px) {
-//             width: 926px;
-//             min-height: 138px;
+        @media screen and (min-width: 1280px) {
+            width: 926px;
+            min-height: 138px;
         
-//             background-position: 50px 32px;
+            background-position: 50px 32px;
     
-//         }
-//     }
-    
-    
-//     .sl__desc {
-//     // width: 180px;
-//     padding: 43px 66px 20px 57px;
-//     font-family: DM Sans, sans-serif;
-//     font-style: normal;
-//     font-weight: 500;
-//     font-size: 12px;
-//     line-height: 2.55;
-//     text-align: center;
-//     color: #000000;
+        }
+    }
     
     
-    
-//     background-image: url(../../images/testimonuals/vector-tel.svg),
-//     url(../../images/testimonuals/vector-tel.svg),
-//     url(../../images/testimonuals/vector-tel.svg),
-//     url(../../images/testimonuals/vector-tel.svg),
-//     url(../../images/testimonuals/vector-tel.svg),
-//     url(../../images/testimonuals/vector-tel.svg),
-//     url(../../images/testimonuals/vector-tel.svg),
-//     url(../../images/testimonuals/vector-tel.svg);
-//     background-repeat: no-repeat;
-//     background-position: left 51px top 71px, left 51px top 102px, left 51px top 133px, 
-//     left 51px top 164px, left 51px top 195px, left 51px top 226px, left 51px top 257px, left 51px top 288px;
+    .sl__desc {
+    // width: 180px;
+    padding: 43px 66px 20px 57px;
+    font-family: DM Sans, sans-serif;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 12px;
+    line-height: 2.55;
+    text-align: center;
+    color: #000000;
     
     
-//     @media screen and (min-width: 768px) {
-//         padding: 47px 80px 34px 80px;
+    
+    background-image: url(../../images/testimonuals/vector-tel.svg),
+    url(../../images/testimonuals/vector-tel.svg),
+    url(../../images/testimonuals/vector-tel.svg),
+    url(../../images/testimonuals/vector-tel.svg),
+    url(../../images/testimonuals/vector-tel.svg),
+    url(../../images/testimonuals/vector-tel.svg),
+    url(../../images/testimonuals/vector-tel.svg),
+    url(../../images/testimonuals/vector-tel.svg);
+    background-repeat: no-repeat;
+    background-position: left 51px top 71px, left 51px top 102px, left 51px top 133px, 
+    left 51px top 164px, left 51px top 195px, left 51px top 226px, left 51px top 257px, left 51px top 288px;
+    
+    
+    @media screen and (min-width: 768px) {
+        padding: 47px 80px 34px 80px;
         
-//         font-size: 14px;
-//         line-height: 2.16;
-//         letter-spacing: 0.04em;
+        font-size: 14px;
+        line-height: 2.16;
+        letter-spacing: 0.04em;
     
-//         background-image: url(../../images/testimonuals/vector-tablet.svg),
-//         url(../../images/testimonuals/vector-tablet.svg),
-//         url(../../images/testimonuals/vector-tablet.svg);
-//         background-repeat: no-repeat;
-//         background-position: left 60px top 76px, left 60px top 106px, left 60px top 136px;
-//     }
+        background-image: url(../../images/testimonuals/vector-tablet.svg),
+        url(../../images/testimonuals/vector-tablet.svg),
+        url(../../images/testimonuals/vector-tablet.svg);
+        background-repeat: no-repeat;
+        background-position: left 60px top 76px, left 60px top 106px, left 60px top 136px;
+    }
     
-//     @media screen and (min-width: 1280px) {
-//         padding: 47px 89px 39px 87px;
+    @media screen and (min-width: 1280px) {
+        padding: 47px 89px 39px 87px;
         
-//         font-size: 16px;
-//         line-height: 1.86;
-//         letter-spacing: 0.04em;
+        font-size: 16px;
+        line-height: 1.86;
+        letter-spacing: 0.04em;
     
-//         background-image: url(../../images/testimonuals/vector-decstop.svg),
-//         url(../../images/testimonuals/vector-decstop.svg);
-//         background-repeat: no-repeat;
-//         background-position: left 59px top 75px, left 59px top 106px;
-//     }
+        background-image: url(../../images/testimonuals/vector-decstop.svg),
+        url(../../images/testimonuals/vector-decstop.svg);
+        background-repeat: no-repeat;
+        background-position: left 59px top 75px, left 59px top 106px;
+    }
     
-//     }
-    
-    
-//     .sl__name {
-//     margin-top: 52px;
-    
-//     font-family: DM Sans, sans-serif;
-//     font-style: normal;
-//     font-weight: 500;
-//     font-size: 14px;
-//     line-height: 1,86;
-//     text-align: center;
-//     color: #000000;
-    
-//     @media screen and (min-width: 768px) {
-//         margin-top: 42px;
-//         font-size: 16px;
-//     }
-    
-//     @media screen and (min-width: 1280px) {
-//         margin-top: 34px;
-//         font-size: 20px;
-//     }
+    }
     
     
-//     }
+    .sl__name {
+    margin-top: 52px;
     
-//     .sl__poins {
-//         width: 73px;
-//        margin-right: calc((100% - 73px ) / 2);
-//     }
+    font-family: DM Sans, sans-serif;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 1,86;
+    text-align: center;
+    color: #000000;
     
-//     .sl__points-icon {
-//         display: inline-block;
-//         width: 12px;
-//         height: 12px;
-//         background: #D9D9D9;
-//         border-radius: 50%;
-//         padding: 0;
-//     }
+    @media screen and (min-width: 768px) {
+        margin-top: 42px;
+        font-size: 16px;
+    }
     
-//     .icon:not(:last-child) {
-//         margin-right: 18px;
-//     }
+    @media screen and (min-width: 1280px) {
+        margin-top: 34px;
+        font-size: 20px;
+    }
     
-//     .sl__points-home {
-//         display: inline-block;
-//         width: 12.4px;
-//         height: 11.84px;
-//     }
+    
+    }
+    
+    .sl__poins {
+        width: 73px;
+       margin-right: calc((100% - 73px ) / 2);
+    }
+    
+    .sl__points-icon {
+        display: inline-block;
+        width: 12px;
+        height: 12px;
+        background: #D9D9D9;
+        border-radius: 50%;
+        padding: 0;
+    }
+    
+    .icon:not(:last-child) {
+        margin-right: 18px;
+    }
+    
+    .sl__points-home {
+        display: inline-block;
+        width: 12.4px;
+        height: 11.84px;
+    }
