Добавлена розмітка для декстопа

--- a/src/sass/_hero.scss
+++ b/src/sass/_hero.scss
@@ -23,6 +23,14 @@
       url(../images/hero/tablet/milk.png);
     background-position: bottom right 5%, bottom right 30%, bottom 10% left 5%;
   }
+  @media screen and (min-width: 1200px) {
+    width: 1280px;
+    height: 665px;
+    background-image: url(../images/hero/desktop/baby.png),
+      url(../images/hero/desktop/ice-cream.png),
+      url(../images/hero/desktop/milk.png);
+    background-position: bottom right 13%, bottom right 40%, bottom 10% left 8%;
+  }
 }
 .hero__title {
   margin: 0;
@@ -39,6 +47,11 @@
     padding-top: 102px;
     font-size: 22px;
   }
+  @media screen and (min-width: 1200px) {
+    padding-top: 171px;
+    padding-left: 50px;
+    font-size: 38px;
+  }
 }
 .hero__title__text {
   font-family: Titan One;
@@ -50,6 +63,9 @@
 
   @media screen and (min-width: 768px) {
     font-size: 34px;
+  }
+  @media screen and (min-width: 1200px) {
+    font-size: 58px;
   }
 }
 .hero__button {
@@ -76,6 +92,23 @@
 
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+
+  @media screen and (min-width: 1200px) {
+    height: 40px;
+    padding-left: 19px;
+    padding-right: 19px;
+
+    font-size: 14px;
+  }
+}
+.hero__button.products {
+  @media screen and (min-width: 768px) {
+    margin-right: 4px;
+  }
+  @media screen and (min-width: 1200px) {
+    margin-left: 50px;
+    margin-right: 15px;
+  }
 }
 .hero__button:hover {
   background: #c7133e;
@@ -89,36 +122,45 @@
 
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+
+  @media screen and (min-width: 1200px) {
+    padding-left: 19px;
+    padding-right: 19px;
+  }
 }
 .hero__button.recipe:hover {
   background: #ecebeb;
 }
 .hero__button.sell {
   margin: 0;
+  display: flex;
+  align-items: center;
+  text-align: center;
   position: absolute;
   left: 574px;
   top: 38px;
   height: 40px;
-  padding-right: 47px;
-  padding-left: 47px;
+  padding-right: 53px;
+  padding-left: 37px;
 
   font-family: DM Sans;
   font-style: normal;
   font-weight: 700;
   font-size: 16px;
   line-height: 21px;
-  display: flex;
-  align-items: center;
-  text-align: center;
 
   background: #ffffff;
   color: #d41443;
+
+  @media screen and (min-width: 1200px) {
+    left: 1006px;
+  }
 }
 .hero__button.sell::after {
   display: inline-block;
   position: absolute;
   top: 42%;
-  left: 76%;
+  left: 75%;
   content: '';
   width: 10px;
   height: 12px;
@@ -134,8 +176,15 @@
     left: 154px;
     top: 292px;
 
-    width: 114px;
+    width: 124px;
     height: 48px;
+  }
+  @media screen and (min-width: 1200px) {
+    left: 295px;
+    top: 485px;
+
+    width: 203px;
+    height: 78px;
   }
 }
 .hero__text__box::after {
@@ -148,6 +197,12 @@
   border-radius: 20px;
 
   background-image: url(../images/hero/tablet/arrow-right.jpg);
+
+  @media screen and (min-width: 1200px) {
+    width: 26px;
+    height: 26px;
+    background-image: url(../images/hero/desktop/arrow-right.jpg);
+  }
 }
 .hero__text {
   margin: 0;
@@ -158,10 +213,15 @@
   font-size: 8px;
 
   color: #ffffff;
+
+  @media screen and (min-width: 1200px) {
+    font-size: 14px;
+  }
 }
 .hero__text.cafe {
   display: flex;
   flex-wrap: wrap;
+  flex-direction: row-reverse;
   position: absolute;
   width: 43px;
   height: 44px;
@@ -173,15 +233,24 @@
   font-weight: 400;
   font-size: 28px;
   line-height: 32px;
-
-  text-align: right;
   letter-spacing: 0.04em;
 
   color: #d41443;
+
+  @media screen and (min-width: 1200px) {
+    width: 72px;
+    height: 77px;
+    left: 1111px;
+    top: 156px;
+
+    font-size: 46px;
+    line-height: 53px;
+  }
 }
 .hero__text.truck {
   display: flex;
   flex-wrap: wrap;
+  flex-direction: row-reverse;
   justify-content: right;
   position: absolute;
   width: 56px;
@@ -194,11 +263,19 @@
   font-weight: 400;
   font-size: 28px;
   line-height: 32px;
-
-  text-align: right;
   letter-spacing: 0.04em;
 
   color: #d41443;
+
+  @media screen and (min-width: 1200px) {
+    width: 96px;
+    height: 76px;
+    left: 1091px;
+    top: 248px;
+
+    font-size: 46px;
+    line-height: 53px;
+  }
 }
 /* .hero__text.truck::before {
   display: inline-block;
@@ -209,7 +286,7 @@
   height: 18px;
   border-radius: 20px;
 
-  background-image: url(../);
+  background-image: url(../images/);
   background-repeat: no-repeat;
   transform: matrix(-1, 0, 0, 1, 0, 0);
 } */
@@ -221,6 +298,10 @@
   line-height: 10px;
 
   color: #ffffff;
+
+  @media screen and (min-width: 1200px) {
+    font-size: 14px;
+  }
 }
 //пример для фона загрузки разных размеров и плотностей
 // body {
