--- a/src/partials/manufacture.html
+++ b/src/partials/manufacture.html
@@ -5,6 +5,19 @@
     <div class="manu__cow">
       <picture>
         <source srcset="
+              ./images/manufacture/mobile/cow.webp    1x,
+              ./images/manufacture/mobile/cow@2x.webp 2x
+            " media="(min-width: 320px) and (max-width: 767px)" type="image/webp"/>
+        <source srcset="
+              ./images/manufacture/tablet/cow.webp    1x,
+              ./images/manufacture/tablet/cow@2x.webp 2x
+            " media="(min-width: 768px) and (max-width: 1199px)" type="image/webp"/>
+        <source srcset="
+              ./images/manufacture/desktop/cow.webp    1x,
+              ./images/manufacture/desktop/cow@2x.webp 2x
+            " media="(min-width: 1200px)" type="image/webp"/>
+
+        <source srcset="
                   ./images/manufacture/mobile/cow.png    1x,
                   ./images/manufacture/mobile/cow@2x.png 2x
                 " media="(min-width: 320px) and (max-width: 767px)" />
