--- a/src/sass/_manufacture.scss
+++ b/src/sass/_manufacture.scss
@@ -1,27 +1,35 @@
 .manufacture {
   background-color: $secondary-bg-color;
-  background-image: url(../images/manufacture/manufacture-bg.png);
+  background-image: url(../images/manufacture/mobile/manufacture-bg.png);
   background-size: 320px 133px;
   background-repeat: no-repeat;
   background-position-y: 49.4%;
   background-position-x: center;
   padding-bottom: 145px;
-  padding-top: 107px;
+  padding-top: 125px;
 
   @media screen and (min-width: $tablet) {
     background-image: none;
-    padding-bottom: 284px;
-    padding-top: 92px;
+    padding-bottom: 242px;
+    padding-top: 130px;
   }
 
   @media screen and (min-width: $desktop) {
     padding-bottom: 310px;
     padding-top: 125px;
-    background-image: url(../images/manufacture/manufacture-bg.png);
     background-size: 1282px 534px;
     background-repeat: no-repeat;
     background-position-y: 39%;
     background-position-x: center;
+  }
+
+  @media screen and(min-width: $desktop) {
+    background-image: url('../images/manufacture/desktop/manufacture-bg.png');
+    @media screen and (min-device-pixel-ratio: 2),
+      screen and (min-resolution: 192dpi),
+      screen and (min-resolution: 2dppx) {
+      background-image: url('../images/manufacture/desktop/manufacture-bg@2x.png');
+    }
   }
 }
 
@@ -79,6 +87,7 @@
     justify-content: space-between;
   }
 }
+
 .manu__text {
   font-family: $primary-font;
   font-weight: 500;
@@ -225,13 +234,13 @@
 
   @media screen and (min-width: $tablet) {
     font-size: 42px;
-    margin-top: 32px;
+    margin-top: 36px;
     margin-bottom: 13px;
   }
 
   @media screen and (min-width: $desktop) {
     font-size: 65px;
-    margin-top: 11px;
+    margin-top: 40px;
     margin-bottom: 15px;
   }
 }
@@ -248,40 +257,13 @@
     font-size: 14px;
     line-height: 1.714;
     width: 180px;
+    margin-top: 0;
+    margin-bottom: 0;
   }
 
   @media screen and (min-width: $desktop) {
     font-size: 16px;
-    line-height: 1.76;
+    line-height: 1.5;
     width: 330px;
   }
 }
-
-//пример для фона загрузки разных размеров и плотностей
-// body {
-//   @media screen and(max-width: $tablet - 1) {
-//     background-image: url('../images/gallery/mobile/gallary-bg.jpg');
-//     @media screen and (min-device-pixel-ratio: 2),
-//       screen and (min-resolution: 192dpi),
-//       screen and (min-resolution: 2dppx) {
-//       background-image: url('../images/gallery/mobile/gallary-bg@2x.jpg');
-//     }
-//   }
-
-//   @media screen and(min-width: $tablet) {
-//     background-image: url('../images/gallery/tablet/gallary-bg.jpg');
-//     @media screen and (min-device-pixel-ratio: 2),
-//       screen and (min-resolution: 192dpi),
-//       screen and (min-resolution: 2dppx) {
-//       background-image: url('../images/gallery/tablet/gallary-bg@2x.jpg');
-//     }
-//   }
-//   @media screen and(min-width: $desktop) {
-//     background-image: url('../images/gallery/desktop/gallary-bg.jpg');
-//     @media screen and (min-device-pixel-ratio: 2),
-//       screen and (min-resolution: 192dpi),
-//       screen and (min-resolution: 2dppx) {
-//       background-image: url('../images/gallery/desktop/gallary-bg@2x.jpg');
-//     }
-//   }
-// }
