Виставлений свг(білий круг) на цифрах
не знаю як розмістити його під цифри

--- a/src/sass/_hero.scss
+++ b/src/sass/_hero.scss
@@ -250,13 +250,14 @@
 .hero__text.truck {
   display: flex;
   flex-wrap: wrap;
-  flex-direction: row-reverse;
+  /* flex-direction: row-reverse; */
   justify-content: right;
   position: absolute;
   width: 56px;
   height: 43px;
   left: 683px;
   top: 151px;
+  margin-top: 13px;
 
   font-family: Titan One;
   font-style: normal;
@@ -272,24 +273,54 @@
     height: 76px;
     left: 1091px;
     top: 248px;
+    margin-top: 21px;
 
     font-size: 46px;
     line-height: 53px;
   }
 }
-/* .hero__text.truck::before {
+.hero__text.cafe::before {
   display: inline-block;
-  position: absolute;
+  position: relative;
   content: '';
-  margin-top: 8px;
-  width: 20px;
-  height: 18px;
+  top: 13px;
+  left: 9px;
+  width: 16px;
+  height: 16px;
   border-radius: 20px;
 
-  background-image: url(../images/);
+  background-image: url(../images/svg/circle.svg);
   background-repeat: no-repeat;
-  transform: matrix(-1, 0, 0, 1, 0, 0);
-} */
+  background-color: #ffffff;
+
+  @media screen and (min-width: 1200px) {
+    left: 15px;
+    top: 24px;
+    width: 30px;
+    height: 30px;
+  }
+}
+.hero__text.truck::before {
+  display: inline-block;
+  position: relative;
+  content: '';
+  left: 45px;
+  width: 16px;
+  height: 16px;
+  border-radius: 20px;
+
+  background-image: url(../images/svg/circle.svg);
+  background-repeat: no-repeat;
+  background-color: #ffffff;
+
+  @media screen and (min-width: 1200px) {
+    left: 77px;
+    bottom: 5px;
+    right: 15px;
+    width: 30px;
+    height: 30px;
+  }
+}
 .hero__span {
   font-family: DM Sans;
   font-style: normal;
