добавил модальное окно

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -5,17 +5,17 @@
       <img class="logo-icon" src="./images/svg/logo 1.svg" alt="" />
     </a>
     <!-- Кнопка меню -->
-    <button type="button" class="menu-button" data-modal-open>
+    <button type="button" class="menu-button" data-menu-open>
       <svg width="20" height="20">
         <use href="./images/svg/sprite.svg#icon-menu-button"></use>
       </svg>
     </button>
 
     <!-- Меню -->
-    <div class="menu-container is-hidden" data-modal>
+    <div class="menu-container menu-hidden" data-menu>
       <div class="button-container">
         <!-- Кнопка "Close" -->
-        <button type="button" class="button-close" data-modal-close>
+        <button type="button" class="button-close" data-menu-close>
           <svg width="14" height="14">
             <use href="./images/svg/sprite.svg#icon-close-button"></use>
           </svg>
@@ -50,7 +50,7 @@
       </nav>
     </div>
     <!-- Кнопка "Buy now" для tablet/desktop -->
-    <button type="button" class="button-buy none">
+    <button type="button" class="button-buy none" data-modal-open>
       Buy now
       <svg class="arrow-icon" width="10" height="10">
         <use href="./images/svg/sprite.svg#icon-button_arrow"></use>
