--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -50,7 +50,6 @@
   width: 250px;
   height: 502px;
   padding-top: 23px;
-  z-index: 99;
 
   background: #e17992;
 
@@ -71,7 +70,7 @@
   }
 }
 
-.menu-container.is-hidden {
+.menu-container.menu-hidden {
   display: none;
   // opacity: 0;
   // visibility: hidden;
