--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -14,3 +14,7 @@
 @import './slider';
 @import './shops';
 @import './footer';
+@import './modal';
+@import './modal-form';
+@import './modal-checkbox';
+@import './backdrop';
