--- a/src/sass/components/_how-it`s-made.scss
+++ b/src/sass/components/_how-it`s-made.scss
@@ -6,6 +6,19 @@
   padding-right: 20px;
 
   background-color: $bg-color;
+
+  @media screen and (min-width: 768px) {
+    padding-top: 130px;
+    padding-right: 36px;
+    padding-bottom: 242px;
+    padding-left: 36px;
+  }
+  @media screen and (min-width: 1200px) {
+    padding-top: 125px;
+    padding-right: 115px;
+    padding-bottom: 314px;
+    padding-left: 115px;
+  }
 }
 .hm-backgroung-image {
   position: absolute;
@@ -17,6 +30,15 @@
   background-image: url(../images/section3/milk-desk.png);
   background-size: cover;
   background-repeat: no-repeat;
+
+  @media screen and (min-width: 768px) and (max-width: 1199px) {
+    display: none;
+  }
+  @media screen and (min-width: 1200px) {
+    width: 100%;
+    height: 534px;
+    top: 45%;
+  }
 }
 
 .hm-h3 {
@@ -31,6 +53,17 @@
   letter-spacing: 0.04em;
   text-transform: uppercase;
   color: $background-hero;
+
+  @media screen and (min-width: 768px) {
+    font-size: 26px;
+    line-height: 1.15;
+    margin-bottom: 16px;
+  }
+  @media screen and (min-width: 768px) {
+    font-size: 30px;
+    line-height: 1.13;
+    margin-bottom: 15px;
+  }
 }
 .hm-h2 {
   margin-top: 0;
@@ -44,50 +77,157 @@
   letter-spacing: 0.04em;
   text-transform: uppercase;
   color: $title-text-color;
-}
 
+  @media screen and (min-width: 768px) {
+    font-size: 48px;
+    line-height: 1.15;
+    margin-bottom: 50px;
+  }
+  @media screen and (min-width: 768px) {
+    font-size: 58px;
+    line-height: 1.14;
+    margin-bottom: 55px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .hm-picture {
+    display: flex;
+  }
+  .hm-img-container {
+    margin-right: 17px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .hm-img-container {
+    margin-right: 74px;
+  }
+}
 .hm-img {
+  display: block;
   width: 100%;
   margin-bottom: 47px;
+
+  @media screen and (min-width: 768px) {
+    flex-basis: calc((100% - 17px) / 2);
+    margin-bottom: 0;
+  }
+  @media screen and (min-width: 1200px) {
+    flex-basis: calc((100% - 74px) / 2);
+    height: 516px;
+    object-fit: contain;
+  }
 }
 
 .hm-description {
   padding: 0 30px;
+
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 1.62;
+  letter-spacing: 0.04em;
+
+  @media screen and (min-width: 768px) {
+    flex-basis: calc((100% - 17px) / 2);
+    font-size: 14px;
+    line-height: 1.76;
+    padding-top: 50px;
+    padding-right: 0;
+    padding-left: 0;
+  }
+
+  @media screen and (min-width: 1200px) {
+    font-size: 16px;
+    line-height: 1.76;
+    padding-top: 47px;
+  }
 }
 
 .hm-text-black {
   margin-top: 0;
   margin-bottom: 32px;
   color: $primari-text-color;
+
+  @media screen and (min-width: 1200px) {
+    margin-bottom: 35px;
+    font-style: 14px;
+    line-height: 1.94;
+  }
 }
 
 .hm-text {
   margin-top: 0;
   margin-bottom: 25px;
   color: $text-color;
+
+  @media screen and (min-width: 768px) {
+    margin-bottom: 62px;
+  }
+  @media screen and (min-width: 1200px) {
+    margin-bottom: 45px;
+    font-size: 14px;
+  }
 }
 
 .btn-hm {
-  display: block;
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
   box-sizing: content-box;
   padding: 17px 37px;
+
   border: none;
   font-weight: bold;
+  font-size: 14px;
+  line-height: 1.29;
+  border-radius: 20px;
+  color: $hover-text-color;
+  background-color: $text-color-hero;
+
+  transition-property: fill;
+  transition-duration: 350ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  cursor: pointer;
+
+  @media screen and (min-width: 768px) {
+    font-size: 16px;
+    line-height: 1.31;
+  }
+  &:hover,
+  &:focus {
+    background-color: #ecebeb;
+  }
 }
 
 .btn-hm-icon {
   margin-left: 18px;
   fill: $title-text-color;
-  outline: none;
 }
 
 .hm-list {
   padding-top: 39px;
+
+  @media screen and (min-width: 768px) {
+    display: flex;
+    padding-top: 66px;
+    margin: -30px;
+  }
+  @media screen and (min-width: 768px) {
+    padding-top: 39px;
+  }
 }
 .hm-list-item {
   margin-bottom: 38px;
   &:last-child {
     margin-bottom: 0;
+  }
+  @media screen and (min-width: 768px) {
+    flex-basis: calc((100% - 2 * 60px) / 3);
+    margin: 30px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .hm-list-item:last-child {
+    margin-bottom: 30px;
   }
 }
 
@@ -100,6 +240,13 @@
 
   background-repeat: no-repeat;
   background-position: center;
+
+  @media screen and (min-width: 768px) {
+    margin-bottom: 36px;
+  }
+  @media screen and (min-width: 1200px) {
+    margin-bottom: 40px;
+  }
 }
 
 .hm-list-item:nth-child(1)::before {
@@ -119,6 +266,7 @@
 
 .hm-numbers {
   margin-top: 0;
+  margin-bottom: 24px;
 
   font-family: Titan One, sans-serif;
   font-size: 36px;
@@ -127,6 +275,17 @@
   text-transform: uppercase;
 
   color: $hover-text-color;
+
+  @media screen and (min-width: 768px) {
+    font-size: 48px;
+    line-height: 1.15;
+    margin-bottom: 13px;
+  }
+  @media screen and (min-width: 1200px) {
+    font-size: 58px;
+    line-height: 1.14;
+    margin-bottom: 15px;
+  }
 }
 
 .hm-list-text {
@@ -137,6 +296,15 @@
   line-height: 1.7;
 
   color: #000000;
+
+  @media screen and (min-width: 768px) {
+    font-size: 14px;
+    line-height: 1.74;
+  }
+  @media screen and (min-width: 1200px) {
+    font-size: 16px;
+    line-height: 1.76;
+  }
 }
 
 .hm-collage {
